核心代码